@@ -569,6 +569,16 @@ static struct  dmi_system_id omnibook_ids[] __initdata = {
 		},
 		.driver_data = (void*) TSM30X
 	},
+        {
+                .callback = dmi_matched,
+                .ident = "Toshiba Satellite M40X",
+                .matches = {
+                        DMI_MATCH(DMI_SYS_VENDOR, "TOSHIBA"),
+                        DMI_MATCH(DMI_PRODUCT_NAME, "Satellite M40X"),
+                },
+                .driver_data = (void*) TSM30X
+        },
+
 	{
 		.callback = dmi_matched,
 		.ident = "Toshiba Satellite M70",
