@@ -1,6 +1,9 @@
 Changelog file for omnibook package:
 ------------------------------------
 
+2.XXXXXXXX Mathieu Bérard <math_b@users.sourceforge.net>
+* Add dmi info for Toshiba Satellite M40X (Thanks Julien Valroff) 
+
 2.20060806 Mathieu Bérard <math_b@users.sourceforge.net>
 * Make the module linux 2.6 only
   Kernel versions from 2.6.8 to a least 2.6.17 are supported
